1.3.0
	o change imports of color palette from 'glpgUtilityFct' to 'glpgStyle'
1.2.0
    o add vignette with standard patient profiles for SDTM data
    o prepareSubjectProfile: fix in case trans and all missing values for interval plot
    o subjectProfileLinePlot: fix for orientation of paramNameVar labels in ggplot2 >= 3.0.0
    o fix bug when Rmd created after createSubjectProfileReport
    o getGLPGShapePalettePatientProfile: fix mix Unicode and ggplot2 palettes (asText = TRUE)
1.1.0
    o formatParamVar -> formatVarForPlotLabel/formatLongLabel: moved to glpgUtilityFct
1.0.0
    o change default time imputation in subjectProfileIntervalPlot (see 'timeImpType' parameter)
    o getXLimSubjectProfilePlots: fixes for empty interval plot
0.12.1
    o formatParamVar: fix message issue grouping
    o subjectProfileTextPlot: fix panel grid ggplot2 >= 3.3.0
0.12.0
    o checkTimeTrans: fix in case all cont module have the same transf
    o subjectProfileLinePlot: shapeSize, paramNameVar can be multiple
    o createSubjectProfileReport: exportBatchSize, subjectSort[] used also for order export of patient profiles, subjectSortDecreasing
0.11.0
    o subjectProfileLinePlot: yLimFrom new parameter
0.10.0
    o legend: fix when number of levels in aes var higher that represented levels
    o subjectProfile[Interval|Line|Event]Plot: alpha parameter
    o createSubjectProfileReport: suppress warnings Sweave
    o prepareSubjectProfile: remove message: 'scale already present'
    o vignette: more extensive example timeAlign/timeAlignPerSubject
0.9.2
    o createSubjectProfileReport: set knitr environment (to be used within rmd doc)
    o export convertAesVar
0.9.1
    o createSubjectProfileReport: margin set by patient if reportPerSubject
0.9.0
    o subjectProfileCombine: fix extraction time limits in case no plot
    o remove panel border for empty plot
    o timeExpand
0.8.0
    o subjectProfileTextPlot: fix in case paramValueVar is empty