@@ -1,21 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(convertAesVar)
-export(createSubjectProfileReport)
-export(filterData)
-export(getGLPGColorPalettePatientProfile)
-export(getGLPGLinetypePalettePatientProfile)
-export(getGLPGShapePalettePatientProfile)
-export(getNLinesYGgplot)
-export(getPathTemplate)
-export(getTimeTrans)
-export(subjectProfileCombine)
-export(subjectProfileEventPlot)
-export(subjectProfileIntervalPlot)
-export(subjectProfileLinePlot)
-export(subjectProfileReportFormat)
-export(subjectProfileTextPlot)
-export(subjectProfileTheme)
 import(ggplot2)
 importFrom(cowplot,draw_grob)
 importFrom(cowplot,draw_label)
